# coral2

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  conanfile.py  copy.py  last_copy.h
backends/: CMakeLists.txt
backends/interfaces/: Backend.cpp  Backend.h  BackendCapabilities.h  BackendCommandBuffer.cpp  BackendCommandBuffer.h  BackendFramebuffer.cpp  BackendFramebuffer.h  BackendObjectFactory.h  BackendPipeline.cpp  BackendPipeline.h  BackendRenderPass.cpp  BackendRenderPass.h  BackendResource.cpp  BackendResource.h  BackendVertexBuffer.cpp  BackendVertexBuffer.h  CMakeLists.txt  Pipeline.h
backends/opengl/: CMakeLists.txt  OpenglBackend.cpp  OpenglBackend.h  OpenglCommandBuffer.cpp  OpenglCommandBuffer.h  OpenglError.cpp  OpenglError.h  OpenglFramebuffer.cpp  OpenglFramebuffer.h  OpenglPipeline.cpp  OpenglPipeline.h  OpenglRenderPass.cpp  OpenglRenderPass.h  OpenglResource.cpp  OpenglResource.h  OpenglShader.cpp  OpenglShader.h  OpenglVertexBuffer.cpp  OpenglVertexBuffer.h  Shader.cpp  Shader.h
backends/opengl/glad/: glad.c
backends/opengl/src/: OpenglBackend.cpp  OpenglBackend.h  OpenglCommandBuffer.cpp  OpenglCommandBuffer.h  OpenglError.cpp  OpenglError.h  OpenglFramebuffer.h  OpenglPipeline.cpp  OpenglPipeline.h  OpenglResource.h  OpenglShader.cpp  OpenglShader.h  OpenglVertexBuffer.cpp  OpenglVertexBuffer.h  gl.h
backends/vulkan/: CMakeLists.txt  Shader.cpp  Shader.h  VulkanBackbuffer.cpp  VulkanBackbuffer.h  VulkanBackend.cpp  VulkanBackend.h  VulkanBackendStructures.h  VulkanBufferUtils.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanResource.cpp  VulkanResource.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderLoader.cpp  VulkanShaderLoader.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
demos/viewer/: CMakeLists.txt  main.cpp
engine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  CommandBufferManager.cpp  CommandBufferManager.h  Config.h  Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  EngineModule.h  Framebuffer.cpp  Framebuffer.h  Handle.h  HandleImpl.h  MemoryResource.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  ObjectFactoryData.h  ObjectInterface.cpp  ObjectInterface.h  ObjectManager.cpp  ObjectManager.h  Pipeline.h  Property.h  PropertyArray.h  PropertyMap.h  RenderParameters.h  Shader.cpp  Shader.h  Signal.h  memory_resource.h  pch.h
engine/backend/interfaces/: Backend.h  Pipeline.h
engine/backend/opengl/: OpenGLBackend.cpp  OpenGLBackend.h  OpenglError.cpp  OpenglError.h
engine/backend/vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanBackendStructures.h  VulkanError.h  VulkanValidation.h
engine/base/: Connection.h  InternalConnection.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  Ptr.h  Signal.h
engine/commandbuffer/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferManager.cpp  CommandBufferManager.h
engine/glad/: glad.h
engine/materials/: BasicMaterial.cpp  BasicMaterial.h  EncoderMaterial.cpp  EncoderMaterial.h  GlyphMaterial.cpp  GlyphMaterial.h  Material.cpp  Material.h  MeshMaterial.cpp  MeshMaterial.h  PresentationMaterial.cpp  PresentationMaterial.h  TextMaterial.cpp  TextMaterial.h  TexturedMaterial.cpp  TexturedMaterial.h
engine/renderpasses/: RenderPass.cpp  RenderPass.h  RenderPassDefault.cpp  RenderPassDefault.h  RenderPassFramebufferManager.cpp  RenderPassFramebufferManager.h  RenderPassManager.cpp  RenderPassManager.h  RenderPassPresentation.cpp  RenderPassPresentation.h  RenderPassResourceManager.cpp  RenderPassResourceManager.h
engine/resources/: AssetManager.cpp  AssetManager.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderComposer.cpp  ShaderComposer.h  VertexBuffer.cpp  VertexBuffer.h
engine/scene/: Camera.cpp  Camera.h  CameraFreeMovement.cpp  CameraFreeMovement.h  DrawableNode.cpp  DrawableNode.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  NodeManager.cpp  NodeManager.h  Property.cpp  Property.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Transform.cpp  Transform.h
engine/scene/animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Channel.h  Interpolator.h
engine/scene/camera/: Camera.cpp  Camera.h  OrbitCamera.cpp  OrbitCamera.h
engine/scene/light/: AreaLight.h  DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
engine/scene/mesh/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  MeshVertexBuffer.cpp  MeshVertexBuffer.h  Model.cpp  Model.h  ModelAnimation.cpp  ModelAnimation.h
engine/scene/text/: Text.cpp  Text.h
engine/signals/: Connection.h  ConnectionHelpers.h  Handle.h  Signal.h
engine/utils/: AssimpHelpers.cpp  AssimpHelpers.h  CoralException.cpp  CoralException.h  Error.cpp  Error.h  FileUtils.cpp  FileUtils.h  Filesystem.cpp  Filesystem.h  Freetype.cpp  Freetype.h  Logs.cpp  Logs.h  MemoryResource.cpp  Shader.cpp  Shader.h  Singleton.h  rang.hpp
engine/vulkan/: VulkanBackbuffer.cpp  VulkanBackbuffer.h  VulkanBackend.cpp  VulkanBackend.h  VulkanBackendStructures.h  VulkanBufferUtils.h  VulkanCommandBuffer.h  VulkanError.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShaderLoader.cpp  VulkanShaderLoader.h  VulkanValidation.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
tests/: CMakeLists.txt
tests/emscripten/: CMakeLists.txt  main.cpp
tests/emscripten-viewer/: CMakeLists.txt  main.cpp
tests/signals/: CMakeLists.txt  main.cpp
tests/viewer/: CMakeLists.txt  index.html  main.cpp  viewer.html
tests/web/: CMakeLists.txt  glad_egl.c  main.cpp  test.html
tests/web/NvEncoder/: NvEncoder.cpp  NvEncoderGL.cpp
tests/web/client/: CMakeLists.txt  main.cpp
tests/web/glad/: glad_egl.h
tests/web/nvencode/: NvEncoder.cpp  NvEncoderGL.cpp  (+2 more)
utils/: CMakeLists.txt  FileUtils.cpp  Logs.cpp  Logs.h  Singleton.h
(+41 files in other folders)
